# ceres-ba

./: README.md  Readme.md  create_data.sh  run.sh
data/: data.csv  data2.csv
src/: ba_reproj_error_aa.h  bundle_adjustment.cpp  c_api.h  callbacks.h  ceres_options.cpp  read_write.cpp  read_write.h  utils.cpp  utils.h
test/: CMakeLists.txt  bundle_adjust.cpp  create_bundle_adjustment_data.cpp  test_bundle_adjustment.cpp  utils.cpp  utils.h
